tests/snapshots/snapshot_metrics__snapshot_metric_with_zero_value.snap
---
source: tests/snapshot_metrics.rs
assertion_line: 161
expression: encoded
---
# HELP nibe_counter Counter at zero
# TYPE nibe_counter counter
nibe_counter{device_id="test"} 0
# EOF
